--- a/RealEstateBot/Web.config
+++ b/RealEstateBot/Web.config
@@ -7,8 +7,8 @@
   <appSettings>
     <!-- update these with your BotId, Microsoft App Id and your Microsoft App Password-->
     <add key="BotId" value="Test1var" />
-    <add key="MicrosoftAppId" value="6ba0e2ae-5b93-426e-9b29-973cf0fe69a6" />
-    <add key="MicrosoftAppPassword" value="Ees25j3jt9PpOWFu8T2dyNQ" />
+    <add key="MicrosoftAppId" value="" />
+    <add key="MicrosoftAppPassword" value="" />
     <!-- These point to a sample dataset. Update with your own Azure Search service information as needed -->
     <add key="SearchDialogsServiceName" value="realestate" />
     <add key="SearchDialogsServiceKey" value="82BCF03D2FC9AC7F4E9D7DE1DF3618A5" />
@@ -23,7 +23,7 @@
       </system.Web>
   -->
   <system.web>
-    <customErrors mode="Off" /> 
+    <customErrors mode="Off" />
     <compilation debug="true" targetFramework="4.6" />
     <httpRuntime targetFramework="4.6" />
   </system.web>
@@ -34,7 +34,7 @@
         <add value="default.htm" />
       </files>
     </defaultDocument>
-    
+
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
