--- a/Search.Dialogs/Search.Dialogs.csproj
+++ b/Search.Dialogs/Search.Dialogs.csproj
@@ -88,8 +88,10 @@
   <ItemGroup>
     <Compile Include="CancelablePromptChoice.cs" />
     <Compile Include="CancelablePromptOptions.cs" />
+    <Compile Include="Conversations.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchDialog.cs" />
+    <Compile Include="SearchDialog.old.cs" />
     <Compile Include="SearchHitStyler.cs" />
     <Compile Include="SearchRefineDialog.cs" />
     <Compile Include="SearchSelectRefinerDialog.cs" />
