--- a/Search.Dialogs/Search.Dialogs.csproj
+++ b/Search.Dialogs/Search.Dialogs.csproj
@@ -89,9 +89,11 @@
     <Compile Include="CancelablePromptChoice.cs" />
     <Compile Include="CancelablePromptOptions.cs" />
     <Compile Include="Conversations.cs" />
+    <Compile Include="Definitions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchDialog.cs" />
     <Compile Include="SearchDialog.old.cs" />
+    <Compile Include="SearchDialog.partial.cs" />
     <Compile Include="SearchHitStyler.cs" />
     <Compile Include="SearchRefineDialog.cs" />
     <Compile Include="SearchSelectRefinerDialog.cs" />
